[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/ChoiseButtons.gd" type="Script" id=1]

[node name="ChoiseButtons" type="Node2D"]
position = Vector2( -45, -43 )
z_index = 3
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 91.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C1" type="Button" parent="Control"]
anchor_right = 1.0
margin_bottom = 20.0
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C2" type="Button" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -30.0
margin_bottom = -10.0
text = "..."

[node name="C3" type="Button" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -60.0
margin_bottom = -40.0
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/C1" to="." method="_on_C1_pressed"]
[connection signal="pressed" from="Control/C2" to="." method="_on_C2_pressed"]
[connection signal="pressed" from="Control/C3" to="." method="_on_C3_pressed"]
